src/objects/Comprehensive_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>AUDIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AUDIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AUDIT_score__c</fullName>
        <label>AUDIT score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_info_re_mental_psycolo_health__c</fullName>
        <inlineHelpText>Is there any additional information about your past or current mental/ psychological/ emotional health that you think it would be helpful for us to know about? (Refer to initial assessment)</inlineHelpText>
        <label>Additional info re mental/psycolo health</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>IF(LEN(Client__r.MailingStreet) &gt;1, Client__r.MailingStreet&amp; BR() , &quot;&quot;)&amp;
IF(LEN( Client__r.MailingCity ) &gt;1, Client__r.MailingCity &amp; BR() , &quot;&quot;)&amp;
IF(LEN( Client__r.MailingState ) &gt;1, Client__r.MailingState , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_of_referring_agency__c</fullName>
        <label>Address of referring agency:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Client__r.eCASS02t1__Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_child_1__c</fullName>
        <label>Age child 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_child_2__c</fullName>
        <label>Age child 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_child_3__c</fullName>
        <label>Age child 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alcohol_drug_use_cost_you_daily__c</fullName>
        <inlineHelpText>On average how much does your alcohol/ drug use cost you daily?</inlineHelpText>
        <label>Alcohol/ drug use cost you daily?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alcohol_drug_use_cost_you_weekly__c</fullName>
        <label>Alcohol/ drug use cost you weekly?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anxiety_at_prospect_of_mixing_fix__c</fullName>
        <inlineHelpText>Did the prospect of missing a fix (or dose) (of preference substance) make you anxious or worried?
0 = Never/almost never
1 =Sometimes
2 = Often
3 = Always/nearly always</inlineHelpText>
        <label>Anxiety at prospect of mixing fix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_benefits_you_are_not_receiving__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are there any benefits you think you may be entitled to that you are not receiving?</inlineHelpText>
        <label>Any benefits you are not receiving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_concerns_about_legal_issues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you currently have any concerns about legal issues?</inlineHelpText>
        <label>Any concerns about legal issues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_difficulty_with_your_accommodation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you currently have any concerns or difficulties with your accommodation or living arrangements?</inlineHelpText>
        <label>Any difficulty with your accommodation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_learning_difficulty_needs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any literacy, numeracy or learning difficulty needs?</inlineHelpText>
        <label>Any learning difficulty/needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_other_training_or_education_attained__c</fullName>
        <inlineHelpText>Can you tell me of any other training or education you have been involved in?</inlineHelpText>
        <label>Any other training or education attained</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_outstanding_warrants_or_charges__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any outstanding warrants or charges?</inlineHelpText>
        <label>Any outstanding warrants or charges?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_recreational_activities_or_hobbies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are there any recreational activities or hobbies that you are involved in?</inlineHelpText>
        <label>Any recreational activities or hobbies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_relative_aware_of_your_substance_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are any of your family members (including your spouse/ partner) aware of your substance use?</inlineHelpText>
        <label>Any relative aware of your substance use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_relative_has_drugs_difficulties__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do any of your family members (including your spouse or partner) have difficulties with drugs or alcohol or have a history of addiction?</inlineHelpText>
        <label>Any relative has drugs difficulties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anything_re_cultural_or_ethnic_customs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any cultural or ethnic customs or practices that you think we should know about while we are delivering a service to you?</inlineHelpText>
        <label>Anything re cultural or ethnic customs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anything_re_your_religious_beliefs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there anything you think we need to know in relation to providing you a service that is keeping with your religious beliefs and practices?</inlineHelpText>
        <label>Anything re your religious beliefs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aspect_previous_edu_training_most_useful__c</fullName>
        <inlineHelpText>If you have previously engaged in an education or training course, what did you find most useful or enjoyable about it?</inlineHelpText>
        <label>Aspect previous edu/training most useful</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessors_observations_and_comments__c</fullName>
        <label>Assessors observations and comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>At_what_age_did_you_leave_school__c</fullName>
        <label>At what age did you leave school?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aware_HIV_hepatitis_can_be_transmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you aware of the ways in which HIV, hepatitis B &amp; C can be transmitted from one person to another?</inlineHelpText>
        <label>Aware HIV hepatitis can be transmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Been_convicted_of_an_offence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Been convicted of an offence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_1_re_substance_use_short_term__c</fullName>
        <inlineHelpText>What changes would you like to make in relation to your substance use in the short term?</inlineHelpText>
        <label>Change 1 re substance use short term</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_2_re_substance_use_short_term__c</fullName>
        <inlineHelpText>What changes would you like to make in relation to your substance use in the short term?</inlineHelpText>
        <label>Change 2 re substance use short term</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_3_re_substance_use_short_term__c</fullName>
        <inlineHelpText>What changes would you like to make in relation to your substance use in the short term?</inlineHelpText>
        <label>Change 3 re substance use short term</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charged_with_an_offence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charged with an offence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comprehensive Assessments</relationshipLabel>
        <relationshipName>Comprehensive_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Concerned_re_maintaining_a_home__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there anything about running or maintaining a home that you are concerned about or think you might need help with?</inlineHelpText>
        <label>Concerned re maintaining a home?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concerns_about_your_children_s_health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any concerns about your children’s health, welfare or development?</inlineHelpText>
        <label>Concerns about your children’s health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concerns_about_your_sexual_health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you any concerns about your sexual health?</inlineHelpText>
        <label>Concerns about your sexual health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection_drug_alco_use_legal_issues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think there is a connection between your drug/alcohol use and your legal issues?</inlineHelpText>
        <label>Connection drug/alco use &amp; legal issues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_number_of_GP__c</fullName>
        <label>Contact number of GP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_number_of_referrer__c</fullName>
        <formula>Referred_from__r.eCASS02t1__Referred_from_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact number of referrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_number_of_referrer_referring__c</fullName>
        <label>Contact number of referrer / referring</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cultural_Ethnic_Matters_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Cultural/Ethnic Matters-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_substance_use_description__c</fullName>
        <inlineHelpText>Is there anything you would like to tell me about your current substance use including any current Drug Using Risk Behaviours? (Refer to Current Drug Use &amp; Drug Using Risk Behaviours in Initial Assessment.)</inlineHelpText>
        <label>Current substance use description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_in_receipt_of_any_benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you currently in receipt of any benefits?</inlineHelpText>
        <label>Currently in receipt of any benefits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <formula>Client__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUDIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DUDIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUDIT_score__c</fullName>
        <label>DUDIT score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_assessment_complete__c</fullName>
        <label>Date assessment complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_referral_1__c</fullName>
        <label>Date referral 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_referral_2__c</fullName>
        <label>Date referral 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_referral_3__c</fullName>
        <label>Date referral 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_vaccinated_against_hepatitis_B__c</fullName>
        <label>Date vaccinated against hepatitis B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_of_week_work_college_training__c</fullName>
        <label>Days of week (work/ college/ training)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_have_any_debts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you currently have any debts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_regular_income__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have a regular income?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_dental_health_needs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have any dental health needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_need_assistance_with_children__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think you need assistance from any service/agency to help with your children&apos;s health, welfare or development?  If yes please give details</inlineHelpText>
        <label>Do you need assistance with children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_see_child_1_regularly_How_often__c</fullName>
        <label>Do you see child 1 regularly? How often?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_see_child_2_regularly_How_often__c</fullName>
        <label>Do you see child 2 regularly? How often?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_see_child_3_regularly_How_often__c</fullName>
        <label>Do you see child 3 regularly? How often?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_wish_you_could_stop__c</fullName>
        <inlineHelpText>Do you wish you could stop?
0 = Never/almost never
1 =Sometimes
2 = Often
3 = Always/nearly always</inlineHelpText>
        <label>Do you wish you could stop</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_you_income_match_your_expenditure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does you income match your expenditure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_Alco_use_impacted_accomodation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think that your drug/ alcohol use has impacted on your accommodation and living arrangements? If ‘yes’ please give details:</inlineHelpText>
        <label>Drug/Alco use impacted accomodation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_alcohol_use_causes_financial_issues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think that your drug/ alcohol use contributes to your financial issues/ concerns?</inlineHelpText>
        <label>Drug/alcohol use causes financial issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_alcohol_use_impacted_relationships__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think that your drug/ alcohol use has impacted on your relationships?</inlineHelpText>
        <label>Drug/alcohol use impacted relationships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_alcohol_use_re_mental_psycho_health__c</fullName>
        <inlineHelpText>Do you think that there is a link between your drug/ alcohol use and your mental/ psychological/ emotional health? If ‘yes’ please give details:</inlineHelpText>
        <label>Drug/alcohol use re mental/psycho health</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drug_alcohol_use_re_physical_health__c</fullName>
        <inlineHelpText>Do you think that your drug/ alcohol use has had an effect on your physical health? If ‘yes’ please give details:</inlineHelpText>
        <label>Drug/ alcohol use re physical health</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Training_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Education &amp; Training-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_training_history__c</fullName>
        <inlineHelpText>Can you tell me a bit about your education &amp; training history?</inlineHelpText>
        <label>Education &amp; training history?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_status__c</fullName>
        <label>Employment status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed full-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed part-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please state)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_status_other_please_specify__c</fullName>
        <label>Employment status other, please specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_attended_counsellor_psychotherapist__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever attended a counsellor/ psychotherapist/ support worker to help you with psychological or emotional issues?</inlineHelpText>
        <label>Ever attended counsellor/psychotherapist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_been_vaccinated_against_hepatitis_B__c</fullName>
        <inlineHelpText>Do you know if you have ever been vaccinated against hepatitis B?</inlineHelpText>
        <label>Ever been vaccinated against hepatitis B</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (If ‘yes’ please give estimate of date)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_considered_or_attempted_suicide__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever considered or attempted suicide?</inlineHelpText>
        <label>Ever considered or attempted suicide?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_deliberately_self_harmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever deliberately self-harmed?</inlineHelpText>
        <label>Ever deliberately self-harmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_had_a_smear_test__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If female have you ever had a smear test?</inlineHelpText>
        <label>Ever had a smear test?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_received_assistance_re_childrens_H__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ever received assistance re childrens H</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_received_help_re_alcohol_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever received help for your alcohol use in the past?</inlineHelpText>
        <label>Ever received help re alcohol use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_received_help_re_drug_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever received help for your drug use in the past?</inlineHelpText>
        <label>Ever received help re drug use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Current_Relationships_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Family &amp; Current Relationships-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_aware_you_addressing_substanc_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are any of your family members (including your spouse/ partner) aware that you are trying to address your substance use?</inlineHelpText>
        <label>Family aware you addressing substanc use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_history_of_mental_health_problems__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you aware of any family history of mental health problems? If ‘yes’ please give details:</inlineHelpText>
        <label>Family history of mental health problems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_would_support_you__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think that your family members or friends would support you in addressing your substance use?</inlineHelpText>
        <label>Family would support you</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexibility_re_time_work_college_trainin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there any flexibility around the times you attend work/college/ training?
(We ask this to see what services operate at times that may suit you)</inlineHelpText>
        <label>Flexibility re time work/college/trainin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_how_long_1__c</fullName>
        <label>For how long 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_how_long_2__c</fullName>
        <label>For how long 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_how_long_3__c</fullName>
        <label>For how long 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_aware_of_your_substance_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is your GP aware of your substance use and any issues/ difficulties you may have in relation to it?</inlineHelpText>
        <label>GP aware of your substance use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Client__r.eCASS02t1__X4_Gender__c)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_1_re_family_relationship_LT__c</fullName>
        <inlineHelpText>Please identify what goals you have in relation to your family and relationships in the long term: (If applicable)</inlineHelpText>
        <label>Goal 1 re family &amp; relationship LT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_2_re_family_relationship_LT__c</fullName>
        <inlineHelpText>Please identify what goals you have in relation to your family and relationships in the long term: (If applicable)</inlineHelpText>
        <label>Goal 2 re family &amp; relationship LT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_re_Accommodation_LT_1__c</fullName>
        <inlineHelpText>Please identify any goals you may have in relation to your accommodation and living arrangements in the  long term</inlineHelpText>
        <label>Goal re Accommodation LT 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_re_Accommodation_LT_2__c</fullName>
        <inlineHelpText>Please identify any goals you may have in relation to your accommodation and living arrangements in the  long term</inlineHelpText>
        <label>Goal re Accommodation LT 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_re_Employment_situation_LT_1__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your employment situation in the  long term</inlineHelpText>
        <label>Goal re Employment situation LT 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_re_Employment_situation_LT_2__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your employment situation in the  long term</inlineHelpText>
        <label>Goal re Employment situation LT 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_re_Finances_LT_1__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your finances in the  long term:</inlineHelpText>
        <label>Goal re Finances LT 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_re_Finances_LT_2__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your finances in the  long term:</inlineHelpText>
        <label>Goal re Finances LT 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_1_re_general_dental_health_LT__c</fullName>
        <inlineHelpText>Please identify any goals you have in relation to your general/ dental health in the longer term</inlineHelpText>
        <label>Goals 1 re general/dental health LT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_1_re_mental_psyco_health_LT__c</fullName>
        <inlineHelpText>Please identify any goals you have in relation to your mental/ psychological/ emotional health in the long term: (If applicable)</inlineHelpText>
        <label>Goals 1 re mental/psyco health LT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_1_re_substance_use_long_term__c</fullName>
        <inlineHelpText>Please identify the goals you have in relation to your substance use in the longer term:</inlineHelpText>
        <label>Goals 1 re substance use long term</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_2_re_general_dental_health_LT__c</fullName>
        <inlineHelpText>Please identify any goals you have in relation to your general/ dental health in the longer term</inlineHelpText>
        <label>Goals 2 re general/dental health LT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_2_re_mental_psyco_health_LT__c</fullName>
        <inlineHelpText>Please identify any goals you have in relation to your mental/ psychological/ emotional health in the long term: (If applicable)</inlineHelpText>
        <label>Goals 2 re mental/psyco health LT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_2_re_substance_use_long_term__c</fullName>
        <inlineHelpText>Please identify the goals you have in relation to your substance use in the longer term:</inlineHelpText>
        <label>Goals 2 re substance use long term</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_3_re_general_dental_health_LT__c</fullName>
        <inlineHelpText>Please identify any goals you have in relation to your general/ dental health in the longer term</inlineHelpText>
        <label>Goals 3 re general/dental health LT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_3_re_substance_use_long_term__c</fullName>
        <inlineHelpText>Please identify the goals you have in relation to your substance use in the longer term</inlineHelpText>
        <label>Goals 3 re substance use long term</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_Cultural_ethnic_matters_LT1__c</fullName>
        <inlineHelpText>Cultural &amp; ethnic matters: Please identify what goals you may have in the  long term</inlineHelpText>
        <label>Goals re Cultural/ethnic matters LT1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_Cultural_ethnic_matters_LT2__c</fullName>
        <inlineHelpText>Cultural &amp; ethnic matters: Please identify what goals you may have in the  long term</inlineHelpText>
        <label>Goals re Cultural/ethnic matters LT2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_Religious_spiritual_matters_LT1__c</fullName>
        <inlineHelpText>Religious &amp; spiritual matters: Please identify what goals you may have in the  long term</inlineHelpText>
        <label>Goals re Religious/spiritual matters LT1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_Religious_spiritual_matters_LT2__c</fullName>
        <inlineHelpText>Religious &amp; spiritual matters: Please identify what goals you may have in the  long term</inlineHelpText>
        <label>Goals re Religious/spiritual matters LT2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_drug_alco_use_Legal_issue_LT1__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your legal issues in the  long term</inlineHelpText>
        <label>Goals re drug/alco use &amp; Legal issue LT1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_drug_alco_use_Legal_issue_LT2__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your legal issues in the  long term</inlineHelpText>
        <label>Goals re drug/alco use &amp; Legal issue LT2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_edu_training_LT_1__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your education &amp; training in the  long term: (If applicable)</inlineHelpText>
        <label>Goals re edu/training LT 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_edu_training_LT_2__c</fullName>
        <inlineHelpText>Please identify what goals you may have in relation to your education &amp; training in the  long term: (If applicable)</inlineHelpText>
        <label>Goals re edu/training LT 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_re_recreational_activities_LT_1__c</fullName>
        <inlineHelpText>Recreational activities / hobbies: Please identify what goals you may have in the  long term</inlineHelpText>
        <label>Goals re recreational activities LT 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>